yellow/gateway-yellow.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-yellow
  namespace: tenant-yellow
spec:
  infrastructure:
    labels:
      color: yellow
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: gateway-yellow-http
    allowedRoutes:
      namespaces:
        from: Same
